--- a/index.html
+++ b/index.html
@@ -14,9 +14,21 @@
     <main>
         <div class="container1">
             <h1>TRAIN SCHEDULE</h1>
+            <br>
+            <br>
+            <br>
+            <br>
+            <p id="currentTime"></p>
         </div>
         <div class="container2">
             <header>Current Train</header>
+            <ul>
+                <li class="name">Train Name:</li>
+                <li class="destination">Destination:</li>
+                <li class="frequency">Frequency(min):</li>
+                <li class="arrival">Next Arrival:</li>
+                <li class="minutes">Minutes Away:</li>
+            </ul>
 
         </div>
         <div class="container3">
@@ -52,6 +64,8 @@
                 integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
                 crossorigin="anonymous"></script>
 
+
+    <script src="https://momentjs.com/downloads/moment.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
