in JS setted current date & DOM -ed html gave top 50px and color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <div class="container1">
             <h1>TRAIN SCHEDULE</h1>
             <br>
-            <br>
+            <!-- current date -->
+            <h3 id="currentT"></h3>
+        
             <br>
             <br>
             <!-- <p id="currentTime"></p> -->
