in js: 1). variable nextArrival  added frequence to currentTime & outcome is next accure time, 2). displied in header section for current week&time using moment().format() In css: styled font-size of displied current time

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <br>
             <br>
             <br>
+            <p id="currentTime"></p>
             <br>
-            <!-- <p id="currentTime"></p> -->
         </div>
         <div class="container2">
             <table class="table" id="th-head">
